hphp/test/zend/bad/ext/standard/tests/file/readfile_variation10-win32.php.skipif
<?php
if(substr(PHP_OS, 0, 3) != "WIN")
  die("skip run only on Windows");
?>